--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src ="nithu.jpeg" alt="YOUR PROFILE PICTURE" class="profile-picture">
+            <img src ="nithu.png" alt="YOUR PROFILE PICTURE" class="profile-picture">
             <h1> NITHYA.R</h1>
             <p> Student</p>
         </div>
